<resources>
    <string name="app_name">BestWorkout</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome to BestWorkout</string>
    <string name="log_out">Log out</string>
    <string name="welcome_main">Welcome to the future!</string>
    <string name="enter_button">Log in</string>
    <string name="registration_button">Register</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="registration_page">Registration Page</string>
    <string name="profile">Profile</string>
    <string name="open_drawer">side menu\n</string>
    <string name="workout_days">Workout Days</string>
    <string name="workout_time">Workout Time</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="save_changes">Save changes</string>
    <string name="add_workout">Add Workout</string>
    <string name="ReturnButton">Return BaCK</string>
    <string name="tip_illustration">Tip illustration</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
        <string-array name="workout_types">
            <item>Running</item>
            <item>Swimming</item>
            <item>Tennis</item>
            <item>Gym</item>
            <item>Cycling</item>
        </string-array>

</resources>